--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Math Trainer for Web" />
+    <meta
+      name="google-site-verification"
+      content="dBqo_7MorxOU4x6_mC5_ILet0GIZR13QrCrBP0e9TmI"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
