--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="version" content="v1.3" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Math Trainer for Web" />
     <meta
